# 3DTransformationEngine

./: .gitignore  BoundingBox.cpp  BoundingBox.h  CMakeCache.txt  CMakeLists.txt  DrawPix.cpp  DrawPix.h  LightSource.cpp  LightSource.h  Matrix4x4.cpp  Matrix4x4.h  Polyhedron.cpp  Polyhedron.h  README  Scene.cpp  Scene.h  Util.cpp  Util.h  Vector3f.cpp  Vector3f.h  Vertex.cpp  Vertex.h  Vertex2f.cpp  Vertex2f.h  bunny_scene  hw2  hw3  main.cpp  temp.txt  test_scene
Lighting/: Color.cpp  Color.h  LightSource.cpp  LightSource.h  RGB.cpp  RGB.h
Math/: BoundingBox.cpp  BoundingBox.h  Dimension.h  Matrix4x4.h  Vector2f.cpp  Vector2f.h  Vector2i.cpp  Vector2i.h  Vector3f.cpp  Vector3f.h
Polyhedra/: Polyhedron.cpp  Polyhedron.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h
Scenes/: backup
Structs/: DrawPix.cpp  DrawPix.h  PixelBuffer.cpp  PixelBuffer.h  Util.cpp  Util.h  glDrawing.cpp  glDrawing.h
Util/: Util.cpp  Util.h  glDrawing.cpp  glDrawing.h
